# peak-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: ref_peak.mat
data/custom_method/baseline/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  (+5 more)
data/ground_truth/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt
data/raw/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt
images/: logos
misc/: refs.bib
src/: main.py
src/analysis/: metrics.py
src/demos/: custom_method_plot.py  hybrid_method_plot.py  metrics_plot.py  raw_signal_and_ref_peak_plot.py  scipy_method_plot.py
src/processing/: custom_method.py  hybrid_method.py  scipy_method.py
(+250 files in other folders)
