[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peak-detection"
version = "0.1.0"
description = "Comparative analysis of SciPy, hybrid, and custom methods for peak detection."
authors = [{name = "Ravneet-Rahul Sandhu Singh", email = "rahulsandhu542001@gmail.com" }]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["analysis", "processing"]
